# CoinMP

./: .travis.yml  DEPENDENCIES  Dependencies  Makefile.am  Makefile.in  aclocal.m4  aclocal.m4.orig  appveyor.yml  coinmp.pc.in  configure.ac
CoinMP/src/: CoinCbc.cpp
CoinMP/test/: unitTest.cpp
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  config.h.in~
test/: Makefile.am  Makefile.in
